adds option to hide failed implementations from the history table; adds module setting to control clock display

--- a/templates/embed.mustache
+++ b/templates/embed.mustache
@@ -36,8 +36,8 @@ DM20-0196
 	    }
 }}
 
-<div  class="container">
+<div  class="container" id="crucible-container">
     <div align="center" class="iframe-container">
-    <iframe id="vm_or_link" src="" allowfullscreen></iframe>
+    <iframe src="" id="vm_or_link" allowfullscreen></iframe>
     </div><br>
 </div>
