--- a/templates/tasks.mustache
+++ b/templates/tasks.mustache
@@ -25,7 +25,7 @@ DM20-0196
 }}
 
 {{!
-    @template mod_crucible/history
+    @template mod_crucible/tasks
 
     This template renders a table of data
 
@@ -40,7 +40,7 @@ DM20-0196
     <table class = "table table-striped">
         {{! Using a get_string helper }}
         <caption>
-            {{# str }} historycaption, mod_crucible {{/ str }}
+            {{# str }} taskcaption, mod_crucible {{/ str }}
         </caption>
         <thead>
             {{#tableheaders}}
