--- a/templates/clock.mustache
+++ b/templates/clock.mustache
@@ -25,37 +25,16 @@ DM20-0196
 }}
 
 {{!
-    @template mod_crucible/history
+    @template mod_crucible/clock
 
-    This template renders a table of data
+    This template renders a url in an iframe of given size.
 
-            Example context (json):
-            {
-	        tableheaders: [heading 1, heading 2]
-	        tabledata: [ [item1row 1, item2row 1], [item2row1, item2row2] ]
-            }
+	    Example context (json):
+	    {
+		"": "",
+	    }
 }}
 
-<div class = "table-responsive">
-    <table class = "table table-striped">
-        {{! Using a get_string helper }}
-        <caption>
-            {{# str }} historycaption, mod_crucible {{/ str }}
-        </caption>
-        <thead>
-            {{#tableheaders}}
-                <th>{{.}}</th>
-            {{/tableheaders}}
-        </thead>
-        <tbody>
-            {{#tabledata}}
-                <tr>
-                    {{#.}}
-                        <td>{{.}}</td>
-                    {{/.}}
-                </tr>
-            {{/tabledata}}
-        </tbody>
-    </table>
-</div>
+<div id="timerdiv" style="display:none">Timer:&nbsp;<span id="timer"></span></div>
+<br>
 
