adds onclick event to each task in table; results.js updates task results column

--- a/templates/results.mustache
+++ b/templates/results.mustache
@@ -52,8 +52,8 @@ DM20-0196
                 <tr>
                     <td>{{name}}</td>
                     <td>{{desc}}</td>
-                    <td><button id="{{id}}" class="btn btn-primary">{{action}}</button></td>
-                    <td>{{result}}</td>
+                    <td><button id="{{id}}" class="btn btn-primary exec-task">{{action}}</button></td>
+                    <td id="result-{{id}}">{{result}}</td>
                 </tr>
             {{/tabledata}}
         </tbody>
