--- a/templates/form.mustache
+++ b/templates/form.mustache
@@ -31,14 +31,14 @@ DM20-0196
 
             Example context (json):
             {
-	        "definition": "guid",
+	        "eventtemplate": "guid",
 		"url": "url"
             }
 }}
 
 <form action="{{url}}" method="post">
-    <input id="implementation" type="hidden" name="implementation" value=""/>
-    <input id="definition" type="hidden" name="definition" value="{{definition}}" />
+    <input id="event" type="hidden" name="event" value=""/>
+    <input id="eventtemplate" type="hidden" name="eventtemplate" value="{{eventtemplate}}" />
     <input id="end_button" style="display:none" class="btn btn-primary" type="submit" name="stop" value="End Lab" />
     <input id="launch_button" style="display:none" class="btn btn-primary" type="submit" name="start" value="Launch Lab" />
 </form>
