display of results moved to results.js only

--- a/templates/form.mustache
+++ b/templates/form.mustache
@@ -38,7 +38,7 @@ DM20-0196
 
 <form action="{{url}}" method="post">
     <input id="event" type="hidden" name="event" value=""/>
-    <input id="eventtemplate" type="hidden" name="eventtemplate" value="{{eventtemplate}}" />
+    <input id="eventtemplateid" type="hidden" name="eventtemplateid" value="{{eventtemplateid}}" />
     <input id="end_button" style="display:none" class="btn btn-primary" type="submit" name="stop" value="End Lab" />
     <input id="launch_button" style="display:none" class="btn btn-primary" type="submit" name="start" value="Launch Lab" />
 </form>
