adds button to make the vm app go fullscreen

--- a/templates/embed.mustache
+++ b/templates/embed.mustache
@@ -36,8 +36,9 @@ DM20-0196
 	    }
 }}
 
-<div  class="container" id="crucible-container">
+<div id="crucible-container">
+    <p id="enable-fullscreen" style="display: none;" class="btn btn-primary">{{fullscreen}}</p>
     <div align="center" class="iframe-container">
-    <iframe src="" id="vm_or_link" allowfullscreen></iframe>
+    <iframe src="" id="vm_or_link" allowfullscreen="yes" scrolling="no"></iframe>
     </div><br>
 </div>
