--- a/templates/clock.mustache
+++ b/templates/clock.mustache
@@ -35,6 +35,12 @@ DM20-0196
 	    }
 }}
 
-<div id="timerdiv" style="display:none">Timer:&nbsp;<span id="timer"></span></div>
+<div id="timerdiv" style="display:none">
+    <br>
+    {{#extend}}
+    <button id="extend-event" class="btn btn-primary">{{extend}}</button>
+    {{/extend}}
+    <span id="timer"></span>
+</div>
 <br>
 
