--- a/templates/returnform.mustache
+++ b/templates/returnform.mustache
@@ -35,11 +35,13 @@ DM20-0196
 		"url": "url"
             }
 }}
-
+<!--
 <form action="{{url}}" method="get">
     <input type="hidden" name="id" value="{{id}}"/>
     <button id="review_button" style="display:block" class="btn btn-primary" type="submit">{{returntext}}</button>
 </form>
+-->
+<a href="{{url}}" id="review_button" class="btn btn-primary" >{{returntext}}</a>
 
 <br>
 
