uses new nouns for crucible api; adds tasks and task_results table; adds task manage page and displays task history in viewattempt page

--- a/templates/results.mustache
+++ b/templates/results.mustache
@@ -54,6 +54,8 @@ DM20-0196
                     <td>{{desc}}</td>
                     <td><button id="{{id}}" class="btn btn-primary exec-task">{{action}}</button></td>
                     <td id="result-{{id}}">{{result}}</td>
+                    <td>{{points}}</td>
+                    <td id="score-{{id}}">{{score}}</td>
                 </tr>
             {{/tabledata}}
         </tbody>
