--- a/templates/results.mustache
+++ b/templates/results.mustache
@@ -53,9 +53,9 @@ DM20-0196
                     <td>{{name}}</td>
                     <td>{{desc}}</td>
                     <td><button id="{{id}}" class="btn btn-primary exec-task">{{action}}</button></td>
-                    <td id="result-{{id}}">{{result}}</td>
+                    <td id="result-{{id}}" class="result">{{result}}</td>
                     <td>{{points}}</td>
-                    <td id="score-{{id}}">{{score}}</td>
+                    <td id="score-{{id}}" class="score">{{score}}</td>
                 </tr>
             {{/tabledata}}
         </tbody>
