--- a/templates/resultsdetail.mustache
+++ b/templates/resultsdetail.mustache
@@ -54,6 +54,9 @@ DM20-0196
                     <td>{{desc}}</td>
                     <td><button id="{{id}}" class="btn btn-primary exec-task">{{action}}</button></td>
                     <td>{{vmname}}</td>
+                    {{#comment}}
+                        <td>{{comment}}</td>
+                    {{/comment}}
                     <td id="result-{{id}}">{{result}}</td>
                     <td>{{points}}</td>
                     <td id="score-{{id}}">{{score}}</td>
