adds ability for instructor to edit and comment on steamfitter task grades

--- a/templates/grade.mustache
+++ b/templates/grade.mustache
@@ -39,6 +39,6 @@ DM20-0196
     <caption>
         {{# str }} overallgrade, mod_crucible {{/ str }}
     </caption>
-    {{grade}}
+    {{grade}} / {{maxgrade}}
 </div>
 
