--- a/templates/score.mustache
+++ b/templates/score.mustache
@@ -39,7 +39,6 @@ DM20-0196
     <caption>
         {{# str }} attemptscore, mod_crucible {{/ str }}
     </caption>
-    {{score}}
-
+    {{score}} / {{maxgrade}}
 </div>
 
