--- a/templates/invite.mustache
+++ b/templates/invite.mustache
@@ -25,31 +25,42 @@ DM20-0196
 }}
 
 {{!
-    @template mod_crucible/form
+    @template mod_crucible/invite
 
     This template renders a url in an iframe of given size.
 
             Example context (json):
             {
-	            "eventtemplate": "guid",
-		          "url": "url"
+	        "eventtemplate": "guid",
+		"url": "url"
             }
 }}
 
-<span>
-  <form action="{{url}}" method="post" style="display:inline">
-      <input id="event" type="hidden" name="event" value=""/>
-      <input id="eventtemplateid" type="hidden" name="eventtemplateid" value="{{eventtemplateid}}" />
-      <input id="end_button" style="display:none" class="btn btn-primary" type="submit" name="stop" value="End Lab"
-      {{#joinedAttempt}}
-      disabled="disabled"
-      {{/joinedAttempt}}
-      />
-      <input id="launch_button" style="display:none" class="btn btn-primary" type="submit" name="start" value="Launch Lab" />
-  </form>
+{{#code}}
+    <input id="invite_button" style="display:none" onclick="copy_link('{{url}}&code={{code}}')" readonly class="btn btn-primary" name="invite" value="Copy Invite Link" />
+{{/code}}
 
-  <input id="wait" style="display:none; width:400px" class="btn btn-primary" type="" name="start" value="Please wait, system processing" />
-  <input id="failed" style="display:none; width:400px" class="btn btn-primary" type="" name="failed" value="Your operation has failed." />
+{{#joinedAttempt}}
+<p>Currently viewing attempt owned by: {{joinedAttemptOwner}}</p>
 
-  <p id="enable-fullscreen" style="display: none;" class="btn btn-primary">{{fullscreen}}</p>
-</span>
+<form action="{{url}}" method="get">
+  <input type="hidden" name="id" value="{{id}}" />
+  <input id="return-button" type="submit" style="display:none" class="btn btn-primary" value="Return">
+</form>
+{{/joinedAttempt}}
+
+{{#activeAttempts}}
+<form id="join-form" action="" method="get style="display:none">
+  <span>
+    <input type="hidden" name="id" value="{{id}}" />
+    <label for="attempts">Join Existing Lab:</label>
+    <select name="attempt" id="attempt">
+      {{#attempts}}
+          <option value={{id}}>{{username}}</option>
+      {{/attempts}}
+    </select>
+    <input type="submit" class="btn btn-primary" value="Join">
+  </span>
+</form>
+{{/activeAttempts}}
+<br>
