last minute fixes

--- a/templates/results.mustache
+++ b/templates/results.mustache
@@ -52,6 +52,8 @@ DM20-0196
                 <tr>
                     <td>{{name}}</td>
                     <td>{{desc}}</td>
+                    {{#action}}<td><button id="{{id}}" class="btn btn-primary exec-task">{{action}}</button></td>{{/action}}
+                    {{#noaction}}<td><button id="{{id}}" class="btn btn-secondary" disabled>{{noaction}}</button></td>{{/noaction}}
                     {{#comment}}
                         <td>{{comment}}</td>
                     {{/comment}}
