--- a/templates/grade.mustache
+++ b/templates/grade.mustache
@@ -35,10 +35,9 @@ DM20-0196
             }
 }}
 
-<div>
+<div class="notification-style notification-box">
     <caption>
         {{# str }} overallgrade, mod_crucible {{/ str }}
     </caption>
     {{grade}} / {{maxgrade}}
 </div>
-
