address js warning, put all controls in same line

--- a/templates/form.mustache
+++ b/templates/form.mustache
@@ -55,7 +55,7 @@ DM20-0196
 
   <input id="failed" style="display:none; width:300px" class="btn btn-secondary" type="button" name="failed" value="Your operation has failed." />
 
-  <p id="enable-fullscreen" style="display: none;" class="btn btn-primary">{{fullscreen}}</p>
+  <button id="enable-fullscreen" type="button" class="btn btn-primary">{{fullscreen}}</button>
 </span>
 
 <script type="text/javascript">
