finished with codechecker

--- a/templates/form.mustache
+++ b/templates/form.mustache
@@ -45,7 +45,7 @@ DM20-0196
 
       <input id="launch_button" style="display:none" class="btn btn-primary" type="submit" name="start" value="Launch Lab" />
       <input id="end_button" style="display:none" class="btn btn-danger" type="submit" name="stop" value="End Lab"
-          {{#joinedAttempt}}disabled="disabled"{{/joinedAttempt}} />
+          {{#joinedattempt}}disabled="disabled"{{/joinedattempt}} />
   </form>
 
   <button id="wait" style="display:none; width:300px" class="btn btn-primary" type="button" name="wait">
