Additional UI fixes (#12)
* adding js files, changing time settings, and adding copy invite popup

* version bump

* update grade and duration fields to display with topo html

* updating invite copy to new moodle update

* address js warning, put all controls in same line

* saving progress for code format

* finished with codechecker

* version bump

--- a/templates/form.mustache
+++ b/templates/form.mustache
@@ -45,7 +45,7 @@ DM20-0196
 
       <input id="launch_button" style="display:none" class="btn btn-primary" type="submit" name="start" value="Launch Lab" />
       <input id="end_button" style="display:none" class="btn btn-danger" type="submit" name="stop" value="End Lab"
-          {{#joinedAttempt}}disabled="disabled"{{/joinedAttempt}} />
+          {{#joinedattempt}}disabled="disabled"{{/joinedattempt}} />
   </form>
 
   <button id="wait" style="display:none; width:300px" class="btn btn-primary" type="button" name="wait">
@@ -55,7 +55,7 @@ DM20-0196
 
   <input id="failed" style="display:none; width:300px" class="btn btn-secondary" type="button" name="failed" value="Your operation has failed." />
 
-  <p id="enable-fullscreen" style="display: none;" class="btn btn-primary">{{fullscreen}}</p>
+  <button id="enable-fullscreen" type="button" class="btn btn-primary">{{fullscreen}}</button>
 </span>
 
 <script type="text/javascript">
