--- a/templates/invite.mustache
+++ b/templates/invite.mustache
@@ -37,19 +37,23 @@ DM20-0196
 }}
 
 {{#code}}
-    <input id="invite_button" style="display:none" onclick="copy_link('{{url}}&code={{code}}')" readonly class="btn btn-primary" name="invite" value="Copy Invite Link" />
+  <input id="invitationlinkurl" type="text" value="{{url}}&code={{code}}" readonly style="position: absolute; left: -9999px;">
+
+  <button id="copy_invite" type="button" class="btn btn-primary">
+      Copy Invite Link
+  </button>
 {{/code}}
 
-{{#joinedAttempt}}
-<p>Currently viewing attempt owned by: {{joinedAttemptOwner}}</p>
+{{#joinedattempt}}
+<p>Currently viewing attempt owned by: {{joinedattemptowner}}</p>
 
 <form action="{{url}}" method="get">
   <input type="hidden" name="id" value="{{id}}" />
   <input id="return-button" type="submit" style="display:none" class="btn btn-primary" value="Return">
 </form>
-{{/joinedAttempt}}
+{{/joinedattempt}}
 
-{{#activeAttempts}}
+{{#activeattempts}}
 <form id="join-form" action="" method="get style="display:none">
   <span>
     <input type="hidden" name="id" value="{{id}}" />
@@ -62,5 +66,5 @@ DM20-0196
     <input type="submit" class="btn btn-primary" value="Join">
   </span>
 </form>
-{{/activeAttempts}}
+{{/activeattempts}}
 <br>
