change from invite to invitation

--- a/templates/invite.mustache
+++ b/templates/invite.mustache
@@ -40,7 +40,7 @@ DM20-0196
   <input id="invitationlinkurl" type="text" value="{{url}}&code={{code}}" readonly style="position: absolute; left: -9999px;">
 
   <button id="copy_invite" type="button" class="btn btn-primary">
-      Copy Invite Link
+      Copy Invitation Link
   </button>
 {{/code}}
 
