--- a/templates/detail.mustache
+++ b/templates/detail.mustache
@@ -44,7 +44,7 @@ DM20-0196
 {{/license_fullname}}
 
 {{#duration}}
-<div class="notification-style notification-box">
+<div class="crucible-notification-style crucible-notification-box">
   {{durationtext}}: {{#days}}{{days}} Day(s) {{/days}}
   {{#hours}}{{hours}} Hour(s) {{/hours}}
   {{#minutes}}{{minutes}} Minute(s) {{/minutes}}
