--- a/templates/form.mustache
+++ b/templates/form.mustache
@@ -50,9 +50,9 @@ DM20-0196
 
   <button id="wait" style="display:none; width:300px" class="btn btn-primary" type="button" name="wait">
     <span class="spinner-border spinner-border-sm" role="status"></span>
-    &nbsp;&nbsp;Please wait, system processing
+    &nbsp;&nbsp;Please wait, system processing:
+    &nbsp;<span id="lab-status-label">Creating</span>
   </button>
-
   <input id="failed" style="display:none; width:300px" class="btn btn-secondary" type="button" name="failed" value="Your operation has failed." />
 
   <button id="enable-fullscreen" style="display:none; type="button" class="btn btn-primary">{{fullscreen}}</button>
