--- a/templates/grade.mustache
+++ b/templates/grade.mustache
@@ -35,7 +35,7 @@ DM20-0196
             }
 }}
 
-<div class="notification-style notification-box">
+<div class="crucible-notification-style crucible-notification-box">
     <caption>
         {{# str }} overallgrade, mod_crucible {{/ str }}
     </caption>
