--- a/templates/clock.mustache
+++ b/templates/clock.mustache
@@ -35,9 +35,10 @@ DM20-0196
 	    }
 }}
 
-<div id="timerdiv" style="display:none">
+<div id="timerdiv" style="display:none; margin-bottom: 1rem;">
     <span id="timer"></span>
     {{#extend}}
     <button id="extend-event" class="btn btn-primary">{{extend}}</button>
     {{/extend}}
 </div>
+<br>
